adding comments to python file

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\2010301311.py:8: DtypeWarning: Columns (7,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  flights= pd.read_csv(\"./flights.csv\")\n"
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\3677537964.py:8: DtypeWarning: Columns (7,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  flights= pd.read_csv('D:/Project_git/flights.csv')\n"
      ]
     },
     {
@@ -19,7 +19,7 @@
        "(5819079, 31)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
     "\n",
     "\n",
     "\n",
-    "flights= pd.read_csv(\"./flights.csv\")\n",
+    "flights= pd.read_csv('D:/Project_git/flights.csv')\n",
     "\n",
     "#changes the way the df is printed, so it shows all cols without wrapping\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -139,20 +139,20 @@
        "4       ABY   Southwest Georgia Regional Airport       Albany    GA     USA  31.53552  -84.19447"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "airports=pd.read_csv(\"./airports.csv\")\n",
+    "airports=pd.read_csv(\"D:/Project_git/airports.csv\")\n",
     "airports.head()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "(184038, 31)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -213,116 +213,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col]=data[col].fillna(9999)\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = pd.to_datetime(data[col], format='%H%M', errors='coerce')\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = data[col].dt.strftime('%H:%M')\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col]=data[col].fillna(9999)\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = pd.to_datetime(data[col], format='%H%M', errors='coerce')\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = data[col].dt.strftime('%H:%M')\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col]=data[col].fillna(9999)\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = pd.to_datetime(data[col], format='%H%M', errors='coerce')\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = data[col].dt.strftime('%H:%M')\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col]=data[col].fillna(9999)\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = pd.to_datetime(data[col], format='%H%M', errors='coerce')\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = data[col].dt.strftime('%H:%M')\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col]=data[col].fillna(9999)\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = pd.to_datetime(data[col], format='%H%M', errors='coerce')\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = data[col].dt.strftime('%H:%M')\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col]=data[col].fillna(9999)\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[col] = pd.to_datetime(data[col], format='%H%M', errors='coerce')\n",
-      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_21592\\1511948892.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\ethan\\AppData\\Local\\Temp\\ipykernel_23264\\1511948892.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -568,7 +568,7 @@
        "5339857  2015     12    1            2      AA            448      N556UW            SLC                 CLT               02:05          03:01              6.0      13.0        44.0          22:03        20:05     188.0      1727      552.0      4.0             06:08        05:56          -12.0         0          0                 NaN               NaN             NaN            NaN                  NaN            NaN"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -851,14 +851,14 @@
        "5339857  2015  December             1     Tuesday      AA            448      N556UW            SLC                 CLT               02:05          03:01                    6.0          22:03        20:05           188.0          1727             06:08        05:56          -12.0         0          0                 NaN               NaN             NaN            NaN                  NaN            NaN"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#removing cols that arent going to be used\n",
-    "comparison_db = comparison_db.drop([\"TAXI_OUT\", \"WHEELS_OFF\", \"TAXI_IN\",\"WHEELS_ON\"], axis=1)\n",
+    "comparison_db = comparison_db.drop([\"TAXI_OUT\", \"WHEELS_OFF\", \"TAXI_IN\",\"WHEELS_ON\",\"YEAR\",\"MONTH\"], axis=1)\n",
     "\n",
     "#change the month from an int to a string\n",
     "import calendar\n",
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1139,7 @@
        "4  2015  December             1     Tuesday      AA            448      N556UW            SLC                 CLT               02:05          03:01                    6.0          22:03        20:05           188.0          1727             06:08        05:56          -12.0         0          0                 NaN               NaN             NaN            NaN                  NaN            NaN       CLT  Charlotte Douglas International Airport          Charlotte    NC     USA  35.21401  -80.94313"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1161,7 @@
        "(2900, 34)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,14 +1181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path1=\"./subsetted_data.csv\"\n",
+    "file_path1=\"D:\\Project_git\\Flights_BI/subsetted_data.csv\"\n",
     "comparison_db.to_csv(file_path1,index=False)\n",
     "\n",
-    "file_path2=\"./cancelled_flights.csv\"\n",
+    "file_path2=\"D:\\Project_git\\Flights_BI/cancelled_flights.csv\"\n",
     "cancelled_flights_df.to_csv(file_path2,index=False)\n",
     "\n",
     "#Change the name of the airports and airlines using the other csv'\n",
